--- a/1TRIM/DiaPortable/Data/settings/DiaPortableSettings.ini
+++ b/1TRIM/DiaPortable/Data/settings/DiaPortableSettings.ini
@@ -1,4 +1,4 @@
 [DiaPortableSettings]
-LastDirectory=C:\Users\jguzman5292\Desktop\BBDD\DiaPortable
+LastDirectory=C:\Users\jguzman5292\Desktop\BBDD\1TRIM\DiaPortable
 [Language]
 LANG=
